--- a/API with JWT Authentication/appsettings.json
+++ b/API with JWT Authentication/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": "i/hIFwzWnouyi/MFQ4zGwyh8iqbijtMFnDpoyoqPHXY=",
+  "Issuer": "SecureApi",
+  "Audience": "SecureApiUser",
+  "DurationInDays": 30
 }
