Create Database and Identity Tables and add-migration InitialCreate

--- a/API with JWT Authentication/appsettings.json
+++ b/API with JWT Authentication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-9SALBLK;Initial Catalog=API_with_JWT_Authentication;Integrated Security=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
