--- a/API with JWT Authentication/appsettings.json
+++ b/API with JWT Authentication/appsettings.json
@@ -10,8 +10,10 @@
     }
   },
   "AllowedHosts": "*",
-  "JWT": "i/hIFwzWnouyi/MFQ4zGwyh8iqbijtMFnDpoyoqPHXY=",
-  "Issuer": "SecureApi",
-  "Audience": "SecureApiUser",
-  "DurationInDays": 30
+  "JWT": {
+    "Key": "sz8eI7OdHBrjrIo8j9nTW/rQyO1OvY0pAQ2wDKQZw/0=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 30
+  }
 }
