--- a/API with JWT Authentication/appsettings.json
+++ b/API with JWT Authentication/appsettings.json
@@ -14,6 +14,6 @@
     "Key": "sz8eI7OdHBrjrIo8j9nTW/rQyO1OvY0pAQ2wDKQZw/0=",
     "Issuer": "SecureApi",
     "Audience": "SecureApiUser",
-    "DurationInDays": 30
+    "DurationInMinutes": 1
   }
 }
